--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,8 @@
 @import url(articulos.css);
 @import url(info.css);
 @import url(footer.css);
+@import url(form-registro.css);
+@import url(form-login.css);
 
 * {
     margin: 0;
@@ -29,7 +31,7 @@ header{
 .contenedor{
     width: 98%;
     margin: auto;
-    color: #333;
+    color: #fff;
 }
 
 h1{
