--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,7 @@
 @import url(footer.css);
 @import url(form-registro.css);
 @import url(form-login.css);
+@import url(perfil.css);
 
 * {
     margin: 0;
